--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,6 +3,67 @@
 <head>
   <title>Samba Manager</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Fix text visibility issues */
+    .table-dark {
+      --bs-table-color: #fff;
+      --bs-table-bg: #212529;
+      --bs-table-border-color: #373b3e;
+      --bs-table-striped-bg: #2c3034;
+      --bs-table-striped-color: #fff;
+      --bs-table-active-bg: #373b3e;
+      --bs-table-active-color: #fff;
+      --bs-table-hover-bg: #323539;
+      --bs-table-hover-color: #fff;
+    }
+    
+    /* Make form inputs visible on dark background */
+    .form-control, .form-select {
+      background-color: #2c3034;
+      color: #fff;
+      border-color: #495057;
+    }
+    
+    .form-control:focus, .form-select:focus {
+      background-color: #2c3034;
+      color: #fff;
+    }
+    
+    /* Fix card styling */
+    .card {
+      border-color: #495057;
+    }
+    
+    .card-header {
+      background-color: #343a40;
+      border-color: #495057;
+    }
+    
+    /* Fix code blocks */
+    code {
+      color: #ffc107;
+    }
+    
+    /* Fix form labels */
+    label {
+      color: #fff;
+    }
+    
+    /* Fix dropdown menus */
+    .dropdown-menu {
+      background-color: #343a40;
+      border-color: #495057;
+    }
+    
+    .dropdown-item {
+      color: #fff;
+    }
+    
+    .dropdown-item:hover, .dropdown-item:focus {
+      background-color: #495057;
+      color: #fff;
+    }
+  </style>
 </head>
 <body class="bg-dark text-white">
   <div class="container py-4">
@@ -11,6 +72,9 @@
       <a href="/" class="btn btn-secondary">Home</a>
       <a href="/global-settings" class="btn btn-secondary">Global Settings</a>
       <a href="/shares" class="btn btn-secondary">Shares</a>
+      <a href="/users" class="btn btn-secondary">Users</a>
+      <a href="/setup" class="btn btn-primary">Setup</a>
+      <a href="/maintenance" class="btn btn-info">Maintenance</a>
     </nav>
     
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -33,5 +97,10 @@
       <small>Samba Manager - A web interface for managing Samba shares</small>
     </footer>
   </div>
+  
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  
+  {% block extra_js %}{% endblock %}
 </body>
 </html>
