--- a/app/templates/shares.html
+++ b/app/templates/shares.html
@@ -58,7 +58,7 @@
     {% if shares %}
     <div class="table-responsive">
       <table class="table table-dark table-bordered table-hover">
-        <thead class="table-secondary text-dark">
+        <thead class="bg-primary text-white">
           <tr>
             <th>Name</th>
             <th>Path</th>
